# aiodal

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  testing.yaml
.github/workflows/: unittests.yaml
aiodal/: __init__.py  _version.py  bulk.py  connect.py  dal.py  database.py  helpers.py  mixins.py  pytest_plugin.py
aiodal/oqm/: alias.py  aliastable.py  dbentity.py  filters.py  oqm.md  query.py  views.py
aiodal/web/: auth.py  context.py  controllers.py  models.py  paginator.py  slack_notify.py  version.py
examples/: app.py  seed.pgsql  serve.sh
migrations/versions/: 10db926acd3a_widgy.py  74d1ce0ca025_initial.py  b8333803ffda_.py
scripts/: get_access_token.sh
tests/: app.py  authapp.py  conftest.py  crudapp.py  test_asyncpg_migration.py  test_auth_decode.py  test_bulk.py  test_connect.py  test_dal.py  test_dal_basics.py  test_dal_listschema.py  test_dal_multischema.py  test_helpers.py  test_mixins.py  test_oqm_cru_dbentity.py  test_oqm_crud_dbentity.py  test_oqm_delete_dbentity.py  test_oqm_filters.py  test_oqm_insertable_dbentity.py  test_oqm_query_dbentity.py  test_oqm_updateble_dbentity.py  test_oqm_views.py  test_pytest_plugin.py  test_raw_db_api_connection.py  test_slack_notifier.py  test_version.py  test_web_app.py  test_web_app_409.py  test_web_app_auth.py  test_web_auth.py  test_web_auth_app.py  test_web_auth_app_deprecated.py  test_web_paginator.py
tests/fixtures/: authors.jsonl  books.jsonl  widgy.csv
