[tool.poetry]
authors = ["bsnacks000 <bsnacks000@gmail.com>"]
description = "asyncpg sqla data access layer and related tools"
name = "aiodal"
readme = "README.md"
version = "0.7.0a2"

[tool.poetry.dependencies]
SQLAlchemy = ">=2.0,<3.0"
anyio = "^4.0.0"
asyncpg = "^0.27.0"
fastapi = "^0.109"
pytest = "^7.2.1"
python = ">=3.9"
python-jose = "^3.3.0"

# doesn't seem to work unless we upload or create sdist
# [tool.poetry.group.web]
# optional = true

# [tool.poetry.group.web.dependencies]
# fastapi = "^0.109"
# python-jose = "^3.3.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.9.3"
black = "^23.1.0"
mypy = "^1.0.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
toml = "^0.10.2"
uvicorn = "^0.27.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.plugins.pytest11]
aiodal_plugin = "aiodal.pytest_plugin"
