[tool.poetry]
authors = ["bsnacks000 <bsnacks000@gmail.com>"]
description = "asyncpg sqla data access layer and related tools"
name = "aiodal"
readme = "README.md"
version = "0.8.1"

[tool.poetry.dependencies]
SQLAlchemy = "^2.0.35"
anyio = "^4.4.0"
asyncpg = "^0.29.0"
asyncpg-stubs = "^0.29.1"
starlette = ">=0.40.0"
fastapi = "^0.115.2"
cryptography= "^43.0.1"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
pytest = "^8.2.2"
python = ">=3.9 <4.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"
black = "^24.4.2"
httpx = "^0.27.0"
mypy = "^1.10.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
toml = "^0.10.2"
uvicorn = "^0.32.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.plugins.pytest11]
aiodal_plugin = "aiodal.pytest_plugin"

[tool.pytest.ini_options]
markers = ["e2e: mark end to end test"]
